--- a/css/default.css
+++ b/css/default.css
@@ -73,8 +73,8 @@ button {
 }
 
 .container {
-  max-width: 1240px;
-  padding: 0 30px;
+  max-width: 1180px;
+  /* padding: 0 130px; */
   margin: 0 auto;
 }
 
@@ -98,13 +98,11 @@ button {
   }
 }
 
-
 @media (max-width: 768px) {
   .container {
-    padding: 0 20px;
+    padding: 0 40px;
   }
 }
-
 
 @media (max-width: 480px) {
   .container {
