--- a/css/header.css
+++ b/css/header.css
@@ -14,7 +14,8 @@
   height: 29px;
   background-color: transparent;
   border: none;
-  background-image: url('../img/burger.png');
+  background: url('../img/burger.png') no-repeat;
+  background-size: cover;
   transition: .3s ease-in-out;
 }
 
