--- a/css/release copy.css
+++ b/css/release copy.css
@@ -1,11 +1,8 @@
-/* .release__cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+.release__cards {
+  display: flex;
+  flex-wrap: wrap;
   gap: 40px 20px;
-  justify-content: space-between;
-  max-height: 100%;
-} */
+}
 
 .card {
   transition: 0.3s ease-in-out;
@@ -19,26 +16,20 @@
   font-weight: 700;
   line-height: 28px;
   color: #fff;
-  /* height: 228px;  */
+  width: 380px;
+  height: 228px; 
   padding-top: 166px;
   padding-left: 40px;
-  background-size: contain;
-  background-repeat: no-repeat;
+  margin-bottom: 20px; 
 }
-  
+
 .card-vr {
-  display: block;
   background-image: url('../img/1.jpg');
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
-} 
+}
 
 .card-audio {
   background-image: url('../img/2.jpg');
   transform: translateY(50px);
-  background-size: contain;
 }
 
 .card-karaoke {
@@ -56,12 +47,4 @@
 
 .card-playstation {
   background-image: url('../img/6.jpg');
-}
-
-
-@media (max-width: 768px) {   
-  .card-audio,
-  .card-films {
-    transform: translateY(0);
-  }
 }
