--- a/css/default.css
+++ b/css/default.css
@@ -73,8 +73,8 @@ button {
 }
 
 .container {
-  max-width: 1240px;
-  padding: 0 20px;
+  width: 1440px;
+  padding: 0 130px;
   margin: 0 auto;
 }
 
