--- a/css/release.css
+++ b/css/release.css
@@ -1,14 +1,15 @@
-/* .release__cards {
+.release__cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  /* grid-auto-rows: minmax(100px, auto); */
   gap: 40px 20px;
   justify-content: space-between;
-  max-height: 100%;
-} */
+  /* position: relative; */
+}
 
 .card {
   transition: 0.3s ease-in-out;
+  /* position: absolute; */
 }
 
 .release__card:hover {
@@ -19,7 +20,7 @@
   font-weight: 700;
   line-height: 28px;
   color: #fff;
-  /* height: 228px;  */
+  height: 100%; 
   padding-top: 166px;
   padding-left: 40px;
   background-size: contain;
@@ -27,12 +28,10 @@
 }
   
 .card-vr {
-  display: block;
   background-image: url('../img/1.jpg');
-  width: 100%;
-  height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
+  /* width: 100%;
+  height: 100%; */
+  
 } 
 
 .card-audio {
