--- a/css/default.css
+++ b/css/default.css
@@ -73,7 +73,7 @@ button {
 }
 
 .container {
-  width: 1440px;
+  max-width: 1440px;
   padding: 0 60px;
   margin: 0 auto;
 }
@@ -91,6 +91,11 @@ button {
 
 
 @media (max-width: 1024px) {
+  .container {
+    max-width: 1024px;
+    padding: 0 40px;
+  }
+
   .title {
     font-size: 30px;
     line-height: 40px;
