--- a/css/hero.css
+++ b/css/hero.css
@@ -33,8 +33,7 @@
 .hero__container:before {
   content: "";
   position: absolute;
-  background: url("../img/hero.png") top left no-repeat;
-  background-size: contain;
+  background: url("../img/hero.png") top left / contain no-repeat;
   width: 675px;
   height: 762px;
   z-index: 2;
@@ -43,27 +42,14 @@
   top: 250px;
 }
 
-/* .hero__subtitle:before {
-  content: "";
-  position: absolute;
-  background: url("../img/hero.png") top left no-repeat;
-  background-size: contain;
-  width: 675px;
-  height: 762px;
-  z-index: 2;
-  display: block;
-  right: 10px;
-  top: -80px;
-} */
-
-.hero__title:after { 
+.hero__container:after { 
   display: block; 
   position: absolute;
   content: "";
   width: 97px;
   height: 97px;
-  left: 530px;
-  top: 700px;
+  left: 647px;
+  top: 826px;
   background-color: transparent;
   background-image: url("../img/down.svg");
   background-size: contain;
@@ -96,17 +82,13 @@
 .hero__block_title {
   width: 179px;
   height: 155px;
-  background-image: url('../img/hero_4.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+  background: url('../img/hero_4.png') center / contain no-repeat;
 }
 
 .hero__block_desc {
   width: 151px;
   height: 132px;
-  background-image: url('../img/hero-new.png');
-  background-repeat: no-repeat;
-  background-size: contain;
+  background: url('../img/hero-new.png') center / contain no-repeat;
 }
 
 /* .hero__block {
@@ -175,7 +157,7 @@ font-variant: small-caps;
   }
 
   .container {
-    width: 1200px;
+    max-width: 1200px;
     padding: 0 60px;
   }
 
@@ -195,11 +177,11 @@ font-variant: small-caps;
     top: 177px;
   }
   
-  .hero__title:after {
+  .hero__container:after {
     width: 67px;
     height: 67px;
-    left: 462px;
-    top: 488px;
+    left: 569px;
+    top: 578px;
   }
   
   .hero__block {
@@ -223,13 +205,41 @@ font-variant: small-caps;
   }
 }
 
+@media (max-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+
+  .container:before {
+    left: 510px;
+    top: 170px;
+  }
+
+  .container:after {
+    left: 476px;
+    top: 575px;
+  }
+}
+
 @media (max-width: 768px) {  
   .container {
+    max-width: 768px;
     padding: 0 43px;
   }
 
+  .container:before {
+    width: 409px;
+    height: 479px;
+    left: 310px;
+    top: 175px;
+  }
+
+  .container:after {
+    display: none;
+  }
+
   .hero__title {
-    font-size: 116px;
+    font-size: 114px;
   }
 
   .hero__subtitle {
@@ -238,18 +248,7 @@ font-variant: small-caps;
     padding-left: 100px;    
     margin-bottom: 62px;
   }
-  
-  .hero__subtitle:before {
-    width: 409px;
-    height: 479px;
-    left: 270px;
-    top: -55px;
-  }
-  
-  .hero__title:after {
-    display: none;
-  }
-  
+    
   .hero__block {
     margin-bottom: 131px;
   }
@@ -272,10 +271,13 @@ font-variant: small-caps;
 }
 
 @media (max-width: 480px) {
+  .container {
+    max-width: 320px;
+    padding: 0 21px;
+  }
 
   .hero {
     height: 230px;
-    padding: 20px 0;
   }
   
   .hero__title {
@@ -291,15 +293,11 @@ font-variant: small-caps;
     margin-bottom: 21px;
   }
   
-  .hero__subtitle:after {
-    display: none;
-  }
-  
-  .hero__subtitle:before {
+  .hero__container:before {
     width: 161px;
     height: 179px;
-    left: 117px;
-    top: -23px;
+    left: 139px;
+    top: 123px;
   }
   
   .hero__block {
