--- a/css/release.css
+++ b/css/release.css
@@ -1,15 +1,21 @@
+/* .release__cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px 20px;
+  align-items: center;
+  justify-content: space-between;
+} */
+
 .release__cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  /* grid-auto-rows: minmax(100px, auto); */
+  grid-template-columns: repeat(3, 380px);
+  grid-template-rows: repeat(2, 228px);
   gap: 40px 20px;
-  justify-content: space-between;
-  /* position: relative; */
 }
 
-.card {
+.release__card {
   transition: 0.3s ease-in-out;
-  /* position: absolute; */
+  background-size: cover;
 }
 
 .release__card:hover {
@@ -20,24 +26,18 @@
   font-weight: 700;
   line-height: 28px;
   color: #fff;
-  height: 100%; 
   padding-top: 166px;
   padding-left: 40px;
-  background-size: contain;
-  background-repeat: no-repeat;
+  margin-bottom: auto;
 }
   
 .card-vr {
   background-image: url('../img/1.jpg');
-  /* width: 100%;
-  height: 100%; */
-  
 } 
 
 .card-audio {
   background-image: url('../img/2.jpg');
   transform: translateY(50px);
-  background-size: contain;
 }
 
 .card-karaoke {
@@ -58,9 +58,31 @@
 }
 
 
-@media (max-width: 768px) {   
+@media (max-width: 1200px) {
+  .release__cards {
+    grid-template-columns: repeat(3, 287px);
+    grid-template-rows: repeat(2, 182px);
+    gap: 30px 22px;
+  }
+}
+
+@media (max-width: 768px) { 
+  .release__cards {
+    grid-template-columns: repeat(2, 334px);
+    grid-template-rows: repeat(3, 200px);
+    gap: 20px;
+  }
+
   .card-audio,
   .card-films {
     transform: translateY(0);
+  }
+}
+
+@media (max-width: 480px) {
+  .release__cards {
+    grid-template-columns: repeat(2, 134px);
+    grid-template-rows: repeat(3, 75px);
+    gap: 10px;
   }
 }
