--- a/css/release.css
+++ b/css/release.css
@@ -1,11 +1,3 @@
-/* .release__cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px 20px;
-  align-items: center;
-  justify-content: space-between;
-} */
-
 .release__cards {
   display: grid;
   grid-template-columns: repeat(3, 380px);
@@ -84,5 +76,10 @@
     grid-template-columns: repeat(2, 134px);
     grid-template-rows: repeat(3, 75px);
     gap: 10px;
+  }
+  
+  .release__card_desc {
+    font-size: 10px;
+    line-height: 14px;
   }
 }
