--- a/css/default.css
+++ b/css/default.css
@@ -90,19 +90,12 @@ button {
 }
 
 
-@media (max-width: 1200px) {
+@media (max-width: 1440px) {
   .container {
     max-width: 1200px;
     padding: 0 60px;
   }
-}
-
-@media (max-width: 1024px) {
-  .container {
-    max-width: 1024px;
-    padding: 0 40px;
-  }
-
+  
   .title {
     font-size: 30px;
     line-height: 40px;
@@ -110,19 +103,23 @@ button {
   }
 }
 
+@media (max-width: 1024px) {
+  .container {
+    max-width: 960px;
+    padding: 0 40px;
+  }
+}
+
 @media (max-width: 768px) {
   .container {
-    max-width: 768px;
-    padding: 0 43px;
+    max-width: 700px;
+    padding: 0 20px;
   }
 }
 
 @media (max-width: 480px) {
   .container {
-    max-width: 320px;
-    padding: 0 21px;
+    min-width: 280px;
+    padding: 0 20px;
   }
 }
-
-
-
