--- a/css/faq.css
+++ b/css/faq.css
@@ -1,7 +1,77 @@
-.faq__list {
+.faq__item {
+  position: relative;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
+  /* align-items: center; */
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  min-height: 70px;
+  font-size: 24px;
+  line-height: 28px;
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 4%, 11%);
+  padding: 30px 70px;
+  margin-bottom: 20px;
 }
+
+.faq__btn {
+  display: flex;
+}
+
+.faq__item:nth-child(2n) {
+  background-color: var(--bg-color);
+  color: hsl(0, 0%, 100%);
+  transition: .3s ease-in-out;
+}
+
+.faq__item_title {
+  text-align-last: left;
+  padding: 10px;
+  margin-right: 30px;
+}
+
+.faq__item_text {
+  font-size: 14px;
+  padding: 1em 2.2em;
+  border-top: 0;
+}
+
+.acc__accord {
+  display: block;
+  min-width: 30px;
+  height: 30px;
+  transition: transform .5s ease;
+}
+
+/* 
+.faq__btn_purple {
+  background-color: transparent;
+  border: none;
+  width: 46px;
+  height: 46px;  
+  transition: .3s ease-in-out;
+} */
+
+.faq__btn:hover .acc__accord {
+  background-image: url("../img/open-purple-hover.svg");
+}
+
+.faq__item_title:active .acc__accord {
+  background-image: url("../img/close-purple.svg");  
+}
+
+.faq__btn_purple:hover .acc__accord {
+  background-image: url("../img/open-hover.svg");
+}
+
+.faq__btn_purple:active .acc__accord {
+  background-image: url("../img/close.svg");  
+}
+
+
+/*
 
 .faq__item {
   display: flex;
@@ -33,24 +103,19 @@
   background-image: url("../img/open.svg");
 }
 
-.faq__item:nth-child(2n) {
-  background-color: var(--bg-color);
-  color: hsl(0, 0%, 100%);
-  transition: .3s ease-in-out;
-}
 
-.faq__btn:hover {
+.faq__btn:hover .acc__accord {
   background-image: url("../img/open-purple-hover.svg");
 }
 
-.faq__btn:active {
+.faq__btn:active .acc__accord {
   background-image: url("../img/close-purple.svg");  
 }
 
-.faq__btn_purple:hover {
+.faq__btn_purple:hover .acc__accord {
   background-image: url("../img/open-hover.svg");
 }
 
-.faq__btn_purple:active {
+.faq__btn_purple:active .acc__accord {
   background-image: url("../img/close.svg");  
-}
+} */
