--- a/css/release.css
+++ b/css/release.css
@@ -62,6 +62,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 182px);
     gap: 30px 22px;
+    justify-content: center;
   }
 }
 
@@ -89,7 +90,7 @@
     gap: 10px;
     /*ADD*/
     max-width: 320px;
-    margin: 0 auto;
+    margin: 0 auto;    
   }
   
   .release__card {
