--- a/css/default.css
+++ b/css/default.css
@@ -117,6 +117,10 @@ button {
 }
 
 @media (max-width: 480px) {
+  section {
+    padding: 30px 0;
+  }
+
   .container {
     min-width: 280px;
     padding: 0 10px;
@@ -124,5 +128,6 @@ button {
 
   .title {
     font-size: 14px;
+    margin-bottom: 15px;
   }
 }
