--- a/css/feedback.css
+++ b/css/feedback.css
@@ -4,18 +4,29 @@
 
 .feedback__item {
   display: flex;
-  justify-content: center;
+  justify-content: center;  
 }
 
 .feedback__item_block {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   margin-right: 20px;
 }
 
 .feedback__item_image {
-  margin-bottom: 11px;
+  margin-bottom: 11px;    
+}
+
+.feedback__item_block:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 90%;
+  top: 0;
+  background: radial-gradient(50% 50% at 50% 50%, rgba(196, 196, 196, 0) 0%, rgba(108, 2, 135, 0.5) 100%);
+  border-radius: 50%;  
 }
 
 .feedback__item_text {
@@ -27,21 +38,97 @@
 .feedback__arrow_left,
 .feedback__arrow_right {
   position: absolute;
-  /* width: 34px; */
+  width: 45px;
   /* height: 66px; */
-  top: calc(50% - 15px);
+  top: calc(50% - 58px);
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  /* display: flex; */
+  /* align-items: center; */
+  /* justify-content: center; */
   background-color: transparent;
   border: none;
 }
 
-/* .feedback__arrow_left {
+.feedback__arrow_left {
   left: 0;
 }
 
 .feedback__arrow_right {
   right: 0;
-} */
+}
+
+
+@media (max-width: 1024px) {
+  .feedback__item_block:after {
+    background: none;  
+  }
+
+  .feedback__item_text {
+    max-width: 515px;
+    font-size: 18px;
+    line-height: 26px;
+    padding-top: 35px;
+  }
+
+  .feedback__item_desc {
+    font-size: 18px;
+    line-height: 26px;
+  }
+  
+  .feedback__item_image {
+    width: 172px;
+    height: 172px;   
+  }
+}
+
+@media (max-width: 768px) {
+  .feedback__item_text {
+    max-width: 393px;
+    font-size: 16px;
+    line-height: 22px;
+    padding-top: 35px;
+  }
+
+  .feedback__item_desc {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  
+  .feedback__item_image {
+    width: 172px;
+    height: 172px;   
+  }
+}
+
+@media (max-width: 480px) {
+  .feedback__item {
+    flex-direction: column;
+  }
+
+  .feedback__arrow_left,
+.feedback__arrow_right {
+  display: none;
+}
+
+  .feedback__item_block:after {
+    width: 41%;  
+  }
+
+  .feedback__item_text {
+    max-width: 393px;
+    font-size: 16px;
+    line-height: 22px;
+    padding-top: 35px;
+  }
+
+  .feedback__item_desc {
+    font-size: 16px;
+    line-height: 22px;
+  }
+  
+  .feedback__item_image {
+    width: 172px;
+    height: 172px;   
+  }
+}
+
