--- a/css/faq.css
+++ b/css/faq.css
@@ -45,6 +45,7 @@
   transition: transform .5s ease;
 }
 
+
 /* 
 .faq__btn_purple {
   background-color: transparent;
@@ -71,8 +72,36 @@
 }
 
 
-/*
+@media (max-width: 1024px) {
+  .faq__item_title {
+    font-size: 20px;
+  }  
 
+  .faq__item:nth-child(2n) {
+    background-color: #fff;
+    color: hsl(0, 4%, 11%);
+  }
+
+  .faq__item:last-child {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .faq__item_title {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .faq__item {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+
+
+/*
 .faq__item {
   display: flex;
   justify-content: space-between;
