--- a/css/footer.css
+++ b/css/footer.css
@@ -73,3 +73,47 @@
   display: flex;
   justify-content: space-between;
 }
+
+
+@media (max-width: 768px) {
+  .contacts__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contacts__left {
+    align-items: center;
+    margin: 0;
+    margin-bottom: 30px;
+    gap: 27px;
+  }
+  
+  .contacts__address,
+  .contacts__phone,
+  .contacts__email {
+    margin-bottom: 0;
+  }  
+}
+
+@media (max-width: 320px) {
+  .contacts__address,
+  .contacts__phone,
+  .contacts__email {
+    font-size: 14px;
+    line-height: 18px
+  }
+
+  .contacts__copyright {
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+    line-height: 16px;
+    gap: 19px;
+  }
+
+  .contacts__author {
+    text-align: center;
+    gap: 5px;
+  }
+
+}
