--- a/css/hero copy.css
+++ b/css/hero copy.css
@@ -10,7 +10,7 @@
 .hero__title {
   position: relative;
   font-weight: 900;
-  font-size: 150px;
+  font-size: 200px;
   letter-spacing: -0.1em;
   line-height: 100%;
 }
@@ -43,18 +43,18 @@
   height: 762px;
   z-index: 2;
   display: block;
-  right: 0;
-  top: 65px;
+  right: 135px;
+  top: 250px;
 }
 
-.hero__wrapper:after { 
+.hero__container:after { 
   display: block; 
   position: absolute;
   content: "";
   width: 97px;
   height: 97px;
-  right: 543px;
-  top: 645px;
+  right: 680px;
+  top: 826px;
   background-color: transparent;
   background-image: url("../img/down.svg");
   background-size: contain;
@@ -97,7 +97,6 @@
 }
 
 .hero__btn {
-  position: absolute;
   font-weight: 700;
   font-size: 26px;
   line-height: 30px;
@@ -109,50 +108,60 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px 5px hsla(288, 97%, 27%, 0.6);
   transition: .3s ease-in-out;
-  z-index: 3;  
+  position: absolute;
+  z-index: 3;
 }
 
 .hero__btn:hover {
   background-color: var(--bg-next-color);
 }
 
-.hero__btn:focus,
+.hero__btn:focus {
+  background-color: var(--secondary-color);
+}
+
 .hero__btn:active {
   background-color: var(--secondary-color);
 }
 
 
-@media (max-width: 1024px) {
+@media (max-width: 1440px) {
+  .hero__container:after {    
+    left: 647px;    
+  }
+}
+
+@media (max-width: 1200px) {
   .hero {
-    height: 583px;
+    height: 622px;
+    padding: 29px 0;
   }
 
   .hero__title {
-    font-size: 120px;
-    line-height: 1;
+    font-size: 152px;
+    text-align: center;
   }
 
-  .hero__wrapper:before {
-    width: 453px;
-    height: 420px;
-  }
-
-  .hero__wrapper:after {
-    width: 67px;
-    height: 67px;
-    left: 416px;
-    top: 387px;
+  .hero__subtitle {
+    margin-bottom: 50px;
   }
   
-  .hero__subtitle {
-    font-size: 22px;
-    line-height: 30px;
-    padding-left: 100px;
-    margin-bottom: 30px;
+  .container:before {
+    width: 453px;
+    height: 520px;
+    left: 600px;
+    top: 177px;
   }
-    
+  
+  .hero__container:after {
+    width: 67px;
+    height: 67px;
+    left: 569px;
+    top: 578px;
+  }
+  
   .hero__block {
-    margin-bottom: 80px;
+    margin-bottom: 100px;
   }
 
   .hero__block_title {
@@ -172,32 +181,43 @@
   }
 }
 
-@media (max-width: 768px) {  
-  .hero__wrapper:before {
-    width: 409px;
-    height: 479px;
-    left: 280px;
-    top: 55px;
+@media (max-width: 1024px) {
+  .container:before {
+    left: 510px;
+    top: 170px;
   }
 
-  .hero__wrapper:after {
+  .container:after {
+    left: 476px;
+    top: 575px;
+  }
+}
+
+@media (max-width: 768px) {  
+  .container:before {
+    width: 409px;
+    height: 479px;
+    left: 310px;
+    top: 175px;
+  }
+
+  .container:after {
     display: none;
   }
 
   .hero__title {
-    font-size: 86px;
-    margin-bottom: 20px;
+    font-size: 114px;
   }
 
   .hero__subtitle {
     font-size: 18px;
     line-height: 24px;
     padding-left: 100px;    
-    margin-bottom: 50px;
+    margin-bottom: 62px;
   }
     
   .hero__block {
-    margin-bottom: 100px;
+    margin-bottom: 131px;
   }
 
   .hero__block_title {
@@ -217,34 +237,34 @@
   }  
 }
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
   .hero {
-    height: 204px;
+    height: 230px;
   }
   
   .hero__title {
-    font-size: 35px;
+    font-size: 46px;
     letter-spacing: -0.08em;
-    margin-bottom: 6px;
+    text-align: left;
   }
   
   .hero__subtitle {
     font-size: 10px;
     line-height: 14px;
-    padding-left: 20px;
-    margin-bottom: 10px;
+    padding: 0;
+    margin-bottom: 21px;
   }
   
-  .hero__wrapper:before {
+  .hero__container:before {
     width: 161px;
     height: 179px;
-    left: 120px;
-    top: 23px;
+    left: 139px;
+    top: 123px;
   }
   
   .hero__block {
     gap: 23px;
-    margin-bottom: 30px;
+    margin-bottom: 32px;
   }
   
   .hero__block_title {
