--- a/css/default.css
+++ b/css/default.css
@@ -13,6 +13,7 @@
 html {
   position: relative;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -74,7 +75,7 @@ button {
 
 .container {
   max-width: 1440px;
-  padding: 0 40px;
+  padding: 0 130px;
   margin: 0 auto;
 }
 
