--- a/css/faq.css
+++ b/css/faq.css
@@ -1,23 +1,12 @@
 .faq__item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  /* align-items: center; */
-  justify-content: space-between;
-  width: 100%;
-  height: 100%;
-  min-height: 70px;
+  position: relative; 
+  cursor: pointer;  
   font-size: 24px;
   line-height: 28px;
   background-color: hsl(0, 0%, 100%);
   color: hsl(0, 4%, 11%);
   padding: 30px 70px;
   margin-bottom: 20px;
-}
-
-.faq__btn {
-  display: flex;
 }
 
 .faq__item:nth-child(2n) {
@@ -38,12 +27,25 @@
   border-top: 0;
 }
 
+.faq__btn {
+  display: flex;
+  background-image: url("../img/open-purple.svg");
+  background-repeat: no-repeat;
+}
+
+.faq__btn_purple {
+  background-image: url("../img/open.svg");
+  background-repeat: no-repeat;
+}
+
 .acc__accord {
   display: block;
   min-width: 30px;
   height: 30px;
   transition: transform .5s ease;
 }
+
+
 
 
 /* 
