--- a/css/hero.css
+++ b/css/hero.css
@@ -4,7 +4,6 @@
 
 .hero__wrapper {
   position: relative;
-  min-height: 823px;
 }
 
 .hero__title {
@@ -220,6 +219,8 @@
 @media (max-width: 320px) {
   .hero {
     height: 204px;
+    padding: 0;
+    padding-top: 20px;
   }
   
   .hero__title {
