--- a/css/faq.css
+++ b/css/faq.css
@@ -1,109 +1,8 @@
-.faq__item {
-  position: relative; 
-  cursor: pointer;  
-  font-size: 24px;
-  line-height: 28px;
-  background-color: hsl(0, 0%, 100%);
-  color: hsl(0, 4%, 11%);
-  padding: 30px 70px;
-  margin-bottom: 20px;
-}
-
-.faq__item:nth-child(2n) {
-  background-color: var(--bg-color);
-  color: hsl(0, 0%, 100%);
-  transition: .3s ease-in-out;
-}
-
-.faq__item_title {
-  text-align-last: left;
-  padding: 10px;
-  margin-right: 30px;
-}
-
-.faq__item_text {
-  font-size: 14px;
-  padding: 1em 2.2em;
-  border-top: 0;
-}
-
-.faq__btn {
+.faq__list {
   display: flex;
-  background-image: url("../img/open-purple.svg");
-  background-repeat: no-repeat;
+  flex-direction: column;
 }
 
-.faq__btn_purple {
-  background-image: url("../img/open.svg");
-  background-repeat: no-repeat;
-}
-
-.acc__accord {
-  display: block;
-  min-width: 30px;
-  height: 30px;
-  transition: transform .5s ease;
-}
-
-
-
-
-/* 
-.faq__btn_purple {
-  background-color: transparent;
-  border: none;
-  width: 46px;
-  height: 46px;  
-  transition: .3s ease-in-out;
-} */
-
-.faq__btn:hover .acc__accord {
-  background-image: url("../img/open-purple-hover.svg");
-}
-
-.faq__item_title:active .acc__accord {
-  background-image: url("../img/close-purple.svg");  
-}
-
-.faq__btn_purple:hover .acc__accord {
-  background-image: url("../img/open-hover.svg");
-}
-
-.faq__btn_purple:active .acc__accord {
-  background-image: url("../img/close.svg");  
-}
-
-
-@media (max-width: 1024px) {
-  .faq__item_title {
-    font-size: 20px;
-  }  
-
-  .faq__item:nth-child(2n) {
-    background-color: #fff;
-    color: hsl(0, 4%, 11%);
-  }
-
-  .faq__item:last-child {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  .faq__item_title {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 320px) {
-  .faq__item {
-    font-size: 12px;
-    line-height: 16px;
-  }
-}
-
-
-/*
 .faq__item {
   display: flex;
   justify-content: space-between;
@@ -134,19 +33,64 @@
   background-image: url("../img/open.svg");
 }
 
+.faq__item:nth-child(2n) {
+  background-color: var(--bg-color);
+  color: hsl(0, 0%, 100%);
+  transition: .3s ease-in-out;
+}
 
-.faq__btn:hover .acc__accord {
+.faq__btn:hover {
   background-image: url("../img/open-purple-hover.svg");
 }
 
-.faq__btn:active .acc__accord {
+.faq__btn:active {
   background-image: url("../img/close-purple.svg");  
 }
 
-.faq__btn_purple:hover .acc__accord {
+.faq__btn_purple:hover {
   background-image: url("../img/open-hover.svg");
 }
 
-.faq__btn_purple:active .acc__accord {
+.faq__btn_purple:active {
   background-image: url("../img/close.svg");  
-} */
+}
+
+
+@media (max-width: 1024px) {
+  .faq__item_title {
+    font-size: 20px;
+  }  
+
+  .faq__item:nth-child(2n) {
+    background-color: #fff;
+    color: hsl(0, 4%, 11%);
+  }
+
+  .faq__item:last-child {
+    display: none;
+  }
+  
+  .faq__btn_purple {
+    background-image: url("../img/open-purple.svg");
+  }
+}
+
+@media (max-width: 768px) {
+  .faq__item_title {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 320px) {
+  .faq__item {
+    font-size: 12px;
+    line-height: 16px;
+    padding: 7px 0 10px 7px;
+  }
+
+  .faq__btn {
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+  }
+}
