--- a/css/default copy.css
+++ b/css/default copy.css
@@ -93,16 +93,16 @@ button {
 
 @media (max-width: 1440px) {
   .container {
-    max-width: 904px;
-    padding: 0 60px;
+    max-width: 1240px;
+    padding: 0 30px;
   }
     
 }
 
 @media (max-width: 1024px) {
   .container {
-    max-width: 688px;
-    padding: 0 40px;
+    max-width: 964px;
+    padding: 0 30px;
   }
 
   .title {
@@ -113,7 +113,7 @@ button {
 
 @media (max-width: 768px) {
   .container {
-    min-width: 280px;
+    max-width: 728px;
     padding: 0 20px;
   }
   
@@ -126,6 +126,11 @@ button {
 @media (max-width: 480px) {
   section {
     padding: 30px 0;
+  }
+
+  .container {
+    min-width: 280px;
+    padding: 0 10px;
   }
 
   .title {
