--- a/css/default.css
+++ b/css/default.css
@@ -1,15 +1,3 @@
-@import url('normalize.css');
-@import url('var.css');
-@import url('header.css');
-@import url('hero.css');
-@import url('release.css');
-@import url('halls.css');
-@import url('booking.css');
-@import url('about.css');
-@import url('faq.css');
-@import url('feedback.css');
-@import url('footer.css');
-
 html {
   position: relative;
   box-sizing: border-box;
@@ -95,8 +83,7 @@ button {
   .container {
     max-width: 904px;
     padding: 0 60px;
-  }
-    
+  }    
 }
 
 @media (max-width: 1024px) {
@@ -134,3 +121,38 @@ button {
     margin-bottom: 15px;
   }
 }
+/* 
+.container {
+  >1440px
+  max-width: 1440px
+  
+  1440px - 1024px
+  max-width: 1024px
+  
+  1024px - 768px
+  max-width: 768px
+  
+  <768px
+  min-width: 280px
+}
+
+@media (max-width: 1440px) {
+  .container {
+    max-width: 1024px;
+    padding: 0 60px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 768px;
+    padding: 0 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    min-width: 280px;
+    padding: 0 20px;
+  }
+} */
